[tool.poetry]
name = "skyspell-tests"
version = "0.1.0"
description = ""
authors = ["Dimitri Merejkowsky <dimitri@dmerej.info>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.2"
pytest-xdist = "^3.5"

[tool.poetry.dev-dependencies]

# Linters
black = "^24.4"
flake8 = "3.9.2"
flake8-comprehensions = "^3.4.0"
flake8-bugbear = "^21.4.3"
pep8-naming = "^0.11.1"
isort = "^5.6.4"
mypy = "^1.10"

[tool.pytest]
log_cli = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
