[project]
name = "skyspell-tests"
version = "0.1.0"
description = ""
authors = [
    { name = "Dimitri Merejkowsky", email = "dimitri@dmerej.info" }
]
dynamic = ["dependencies", "requires-python"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.2"
pytest-xdist = "^3.5"

[tool.poetry.group.dev.dependencies]
black = "^24.4"
flake8 = "3.9.2"
flake8-comprehensions = "^3.4.0"
flake8-bugbear = "^21.4.3"
pep8-naming = "^0.11.1"
isort = "^5.6.4"
mypy = "^1.10"

[tool.mypy]
strict = true
files = "*.py"

[tool.pytest]
log_cli = true
[tool.pytest.ini_options]
addopts = "--verbose --capture=no"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
