[package]
name = "skyspell_ci"
version = "0.7.0"
edition = "2018"
description = "Using skyspell for continuous integration"
keywords = ["spell", "cli", "ci"]

[dependencies]
anyhow = "1.0.40"
clap = "3.0.0-beta.5"
ignore = "0.4.18"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
skyspell_core = { path = "../core" }
skyspell = { path = "../cli" }
skyspell_enchant = { path = "../enchant" }
