[package]
name = "skyspell"
version = "1.0.2"

description = "Fast and handy spell checker for the command line"
edition.workspace = true
keywords = ["spell", "cli"]
license.workspace = true
readme = "../../README.md"
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
colored = "2.0.0"
dialoguer = { version = "0.10.0", features = [] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
skyspell_core = { version = "2.0.0", path = "../core" }

[dev-dependencies]
tempfile.workspace = true
