[package]
name = "skyspell"
version = "2.0.0"
description = "Fast and handy spell checker for the command line"
categories = ["command-line-utilities", "text-processing"]
keywords = ["spell-check"]
readme = "../../README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
colored = "2.0.0"
dialoguer = { version = "0.11.0", features = [] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
skyspell_core = { version = "3.0.0", path = "../core" }

[dev-dependencies]
tempfile.workspace = true
