[package]
name = "skyspell_core"
version = "2.0.0"
publish = true
description = "skyspell core library"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
anyhow.workspace = true
diesel_migrations = "2.0.0"
diesel = { version = "2.0.0", features = ["sqlite"] }
directories-next = "2.0.0"
enchant = "0.3.0"
ignore = "0.4.18"
kdl = "4.6.0"
lazy_static = "1.4.0"
miette = "5.4.1"
pathdiff = "0.2.0"
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Note: the 'core' crate also contains code that's used to
# *test* the skyspell and skyspell_kak crates, so this
# is not a dev-dependencies
tempfile.workspace = true
textwrap = "0.16.0"
time = { version = "0.3.5", features = ["std"] }
