[package]
name = "skyspell_core"
version = "3.0.0"
publish = true
description = "skyspell core library"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
anyhow.workspace = true
directories-next = "2.0.0"
enchant = "0.3.0"
ignore = "0.4.18"
lazy_static = "1.4.0"
pathdiff = "0.2.0"
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Note: the 'core' crate also contains code that's used to
# *test* the skyspell and skyspell_kak crates, so this
# is not a dev-dependency
tempfile.workspace = true
textwrap = "0.16.0"
time = { version = "0.3.5", features = ["std"] }
toml = "0.8.12"
toml_edit = { version = "0.22.8", features = ["serde", "parse", "display"] }

