[package]
name = "skyspell_core_tests"
version = "0.1.0"
edition = "2021"
publish = false
# Note: skyspell_core tests must be in a separate crate in order to
# avoid a circular dependency (skyspell_core_tests depends on
# skyspell_tests which depends on skyspell_core)
description = "Tests for skyspell_core"

[dependencies]
skyspell_core = { path = "../core" }
skyspell_tests = { path = "../tests" }
tempfile = "3.2.0"
