[package]
name = "skyspell_enchant"
version = "0.1.0"
edition = "2021"
description = "Implementation of the skyspell Checker trait using enchant-rs"
publish = false

[dependencies]
anyhow = "1.0.40"
enchant = "0.3.0"
skyspell_core = { path = "../core" }

[dev-dependencies]
skyspell_tests = { path = "../tests" }
