[package]
name = "skyspell_kak"
version = "1.0.2"
description = "skyspell - kakoune integration"
keywords = ["kakoune", "skyspell", "spell"]
readme = "README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
anyhow.workspace = true
clap.workspace = true
directories-next = "2.0.0"
itertools = "0.10.0"
snailquote = "0.3"
skyspell_core = { version = "2.0.0", path = "../core" }

[dev-dependencies]
tempfile.workspace = true
