[package]
name = "skyspell_kak"
version = "2.0.1"
description = "skyspell - kakoune integration"
categories = ["command-line-utilities", "text-processing"]
keywords = ["kakoune", "spell-check"]
readme = "README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
anyhow.workspace = true
clap.workspace = true
directories-next = "2.0.0"
itertools = "0.10.0"
snailquote = "0.3"
skyspell_core = { version = "4.0.0", path = "../core" }

[dev-dependencies]
tempfile.workspace = true

[package.metadata.dist]
dist = false