[package]
name = "skyspell_sql"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.40"
diesel_migrations = "1.4.0"
diesel = { version = "1.4.8", features = ["sqlite"] }
directories-next = "2.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
skyspell_core = { path = "../core" }
time = { version = "0.3.5", features = ["std"] }

[dev-dependencies]
paste = "1.0.5"
tempfile = "3.2.0"
skyspell_tests = { path = "../tests" }
