[package]
name = "skyspell_sql_tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
diesel = { version = "1.4.8", features = ["sqlite"] }
paste = "1.0.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
skyspell_core = { path = "../core" }
skyspell_sql = { path = "../sql" }
skyspell_tests = { path = "../tests" }
tempfile = "3.2.0"
