# Note: this crates contains both:
# * Some useful helpers for testing skyspell, like FakeDictionary
# * Tests for the 'core' crate (which can't go inside the core
#   crate because it would create circular dependencies)
#
[package]
name = "skyspell_tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.40"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
skyspell_core = { path = "../core" }
