[package]
name = "skyspell_toml"
version = "0.7.0"
publish = false
edition = "2021"
description = "toml implementation of skyspell_core::Repository"
keywords = ["kakoune", "skyspell", "spell"]

[dependencies]
anyhow = "1.0.40"
clap = "3.0.0-beta.5"
dirs-next = "2.0.0"
itertools = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
skyspell_core = { path = "../core" }
