[package]
name = "skyspell_yaml"
version = "0.7.0"
publish = false
edition = "2021"
description = "store skyspell config in a yaml file"
keywords = ["kakoune", "skyspell", "spell"]

[dependencies]
anyhow = "1.0.40"
dirs-next = "2.0.0"
itertools = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
skyspell_core = { path = "../core" }
